--- a/src/input.css
+++ b/src/input.css
@@ -6,12 +6,12 @@ body {
     font-family: 'Quicksand', sans-serif;
 }
 .navbar-fixed {
-    @apply fixed z-[9999] bg-white bg-opacity-80;
+    @apply fixed z-[9999] bg-white bg-opacity-80 dark:bg-dark dark:opacity-70;
     backdrop-fillter : blur(70px);
     box-shadow : inset 0 -1px 0 0 rgba(0,0,0,0.2);
 }
 .hamburger {
-    @apply w-[30px] h-[2px] my-2 block bg-dark;
+    @apply w-[30px] h-[2px] my-2 block bg-dark dark:bg-white;
 }
 .hamburger-active > span:nth-child(1){
     @apply  rotate-45;
@@ -21,4 +21,7 @@ body {
 }
 .hamburger-active > span:nth-child(3){
     @apply  -rotate-45;
+}
+#dark-toggle:checked ~ label div.toggle-circle {
+    @apply translate-x-3;
 }
